# dungeonmap

./: CMakeLists.txt  README.md  dungeonmap-main.cpp  dungeonmap.cpp  dungeonmap.h
stories/: admin-tiles.txt  index.html  user-default.txt  user-size-map.txt
tasks/: index.html  kanit.conf  sprint0-cmake.txt  sprint0-gtest.txt
test/: CMakeLists.txt  minimalist.cpp
tools/: tileimage.sh
